// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`queue reducer should handle QUEUE_DEPENDENCY_INSTALL for mixed existing queue 1`] = `
Object {
  "foo": Array [
    Object {
      "action": "install",
      "dependencies": Array [
        Object {
          "name": "react-redux",
        },
        Object {
          "name": "lodash",
          "updating": undefined,
          "version": undefined,
        },
      ],
    },
    Object {
      "action": "uninstall",
      "dependencies": Array [
        Object {
          "name": "redux",
        },
      ],
    },
  ],
}
`;

exports[`queue reducer should handle QUEUE_DEPENDENCY_INSTALL for new dependency on empty queue 1`] = `
Object {
  "foo": Array [
    Object {
      "action": "install",
      "dependencies": Array [
        Object {
          "name": "redux",
          "updating": undefined,
          "version": "3.2",
        },
      ],
    },
  ],
}
`;

exports[`queue reducer should handle QUEUE_DEPENDENCY_INSTALL for new dependency on existing queue 1`] = `
Object {
  "foo": Array [
    Object {
      "action": "install",
      "dependencies": Array [
        Object {
          "name": "react-redux",
        },
        Object {
          "name": "redux",
          "updating": undefined,
          "version": undefined,
        },
      ],
    },
  ],
}
`;

exports[`queue reducer should handle QUEUE_DEPENDENCY_INSTALL for updating dependency 1`] = `
Object {
  "foo": Array [
    Object {
      "action": "install",
      "dependencies": Array [
        Object {
          "name": "redux",
          "updating": true,
          "version": "3.3",
        },
      ],
    },
  ],
}
`;

exports[`queue reducer should handle QUEUE_DEPENDENCY_UNINSTALL 1`] = `
Object {
  "foo": Array [
    Object {
      "action": "uninstall",
      "dependencies": Array [
        Object {
          "name": "redux",
        },
      ],
    },
  ],
}
`;

exports[`queue reducer should handle QUEUE_DEPENDENCY_UNINSTALL for mixed existing queue 1`] = `
Object {
  "foo": Array [
    Object {
      "action": "install",
      "dependencies": Array [
        Object {
          "name": "react-redux",
        },
      ],
    },
    Object {
      "action": "uninstall",
      "dependencies": Array [
        Object {
          "name": "redux",
        },
        Object {
          "name": "lodash",
        },
      ],
    },
  ],
}
`;

exports[`queue reducer should handle START_NEXT_ACTION_IN_QUEUE for queue with next action 1`] = `
Object {
  "foo": Array [
    Object {
      "action": "uninstall",
      "dependencies": Array [
        Object {
          "name": "react-redux",
        },
      ],
    },
  ],
}
`;

exports[`queue reducer should handle START_NEXT_ACTION_IN_QUEUE for queue with no more actions 1`] = `Object {}`;
